Fix index page overflow

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -6,7 +6,7 @@ header {
   background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(0, 0, 0, 0)),
     url(../../images/desk2-tiny.jpeg) no-repeat fixed center top;
   background-size: cover;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .nav-container {
